# ftbatch-recipe-bulk-edit

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  cliff.toml  justfile  pyproject.toml
.github/scripts/: extract_latest_changelog.py
.github/workflows/: build-windows.yml  ci.yml  prepare-release.yml  publish-pypi.yml  release.yml
app/: OP_LNPP_PROCESS.OXML  OP_LNPP_SETUP.OXML  OP_LNPP_TEMP.OXML  OP_LNP_PROCESS.OXML  OP_LNP_SETUP.OXML  P_LNP.PXML  Recipe Parameter Reference.xlsx  UP_LNPP_PROCESS.UXML  UP_LNP_PROCESS.UXML  batch_bulk_editor.py  look_at_me.xlsx  main.py  main_from_re-gen.py  output.xlsx  output1.xlsx  sample_recipe.xml
app/New folder/: output.xlsx
app/cli/: cli.py  ui.py
app/converted-outputs/2025-03-28-150200/: OP_LNPP_PROCESS.OXML  OP_LNPP_SETUP.OXML  OP_LNPP_TEMP.OXML  OP_LNP_PROCESS.OXML  OP_LNP_SETUP.OXML  P_LNP.PXML  UP_LNPP_PROCESS.UXML  UP_LNP_PROCESS.UXML
app/converted-outputs/2025-04-03-150226/: OP_LNPP_SETUP.OXML  OP_LNP_SETUP.OXML  UP_LNPP_PROCESS.UXML
app/converted-outputs/2025-04-03-153510/: OP_LNPP_PROCESS.OXML  OP_LNPP_TEMP.OXML  OP_LNP_PROCESS.OXML  UP_LNPP_PROCESS.UXML  UP_LNP_PROCESS.UXML
app/converted-outputs/2025-04-10-132917/: OP_LNPP_PROCESS.OXML  OP_LNPP_SETUP.OXML  OP_LNP_PROCESS.OXML  OP_LNP_SETUP.OXML  UP_LNPP_PROCESS.UXML  UP_LNP_PROCESS.UXML
app/converted-outputs/2025-04-10-133336/: P_LNP.PXML
app/core/: base.py  exporter.py  importer.py  parser.py  writer.py  xml_model.py
app/models/: recipe.py
app/utils/: errors.py  excel_converter.py  logging_cfg.py  string_converter.py  xml_converter.py
scripts/: generate_version_info.py  project_meta.py
tests/: MasterRecipe.xsd  recipe_parameters.xlsx  sample_recipe.xml  smoke_test.py  test_cli.py  test_cli_ui.py  test_flow_excel2xml.py  test_param_expression.py  updated_recipe.xml  ~$recipe_parameters.xlsx
tests/examples/: OP_LNPP_PROCESS.OXML  OP_LNPP_SETUP.OXML  UP_LNPP_PROCESS.UXML
tests/examples/IVT/: CP_GMP_IVT_RECIPE.PXML  CP_GMP_IVT_RECIPE.PXML:Zone.Identifier  OP_IVT01_PROCESS 2.OXML  OP_IVT01_PROCESS 2.OXML:Zone.Identifier  OP_IVTP_PROCESS.OXML  OP_IVTP_PROCESS.OXML:Zone.Identifier  OP_IVTP_TEMP.OXML  OP_IVTP_TEMP.OXML:Zone.Identifier  UP_IVT01_REACTION.UXML  UP_IVT01_REACTION.UXML:Zone.Identifier  UP_IVTP_PROCESS.UXML  UP_IVTP_PROCESS.UXML:Zone.Identifier
tests/examples/LNP/: OP_LNPP_TEMP.OXML  OP_LNP_PROCESS.OXML  OP_LNP_SETUP.OXML  P_LNP.PXML  UP_LNP_PROCESS.UXML  output.xlsx
