[project]
name = "ftbatch-bulk-edit"
dynamic = ["version"]

requires-python = ">=3.14,<3.15"
dependencies = [
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "rich>=12.3.0",
    "typer>=0.24.0",
]
authors = [
  { name = "Marcelo Amorim", email = "marc.amorim6@gmail.com" },
  { name = "Dan Nguyen", email = "dan.nguyen@wmeng.com" },
]
maintainers = [
  { name = "Marcelo Amorim", email = "marc.amorim6@gmail.com" },
]
description = "FactoryTalk Batch Recipe Bulk Editor"
readme = "README.md"
license = "MIT"
keywords = ["FactoryTalk Batch", "ftbatch", "ias88", "defer", "bulk edit"]
classifiers = [
  "Development Status :: 5 - Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/marcelo-6/ftbatch-bulk-edit"
Documentation = "https://github.com/marcelo-6/ftbatch-bulk-edit"
Repository = "https://github.com/marcelo-6/ftbatch-bulk-edit.git"
Issues = "https://github.com/marcelo-6/ftbatch-bulk-edit/issues"
Changelog = "https://github.com/marcelo-6/ftbatch-bulk-edit/blob/main/CHANGELOG.md"

[project.scripts]
ftbatch-bulk-edit = "main:main"

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "mypy>=1.15.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=8.3.4",
    "ruff>=0.13.0",
]

[build-system]
requires = [
    "setuptools>=69",
    "setuptools-scm[toml]>=8",
    "wheel>=0.45",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
local_scheme = "no-local-version"
tag_regex = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.pytest.ini_options]
pythonpath = [
    "app" # the pytests can import modules from this folder
]
