[project]
name = "ftbatch-bulk-edit"
dynamic = ["version"]

requires-python = ">=3.14,<3.15"
dependencies = [
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "rich>=12.3.0",
    "typer>=0.24.0",
]
authors = [
  { name = "Marcelo Amorim", email = "marc.amorim6@gmail.com" },
  { name = "Dan Nguyen", email = "dan.nguyen@wmeng.com" },
]
maintainers = [
  { name = "Marcelo Amorim", email = "marc.amorim6@gmail.com" },
]
description = "FactoryTalk Batch Recipe Bulk Editor"
readme = "README.md"
license = "MIT"
keywords = ["FactoryTalk Batch", "ftbatch", "ias88", "defer", "bulk edit"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Processing :: Markup :: XML",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/marcelo-6/ftbatch-bulk-edit"
Documentation = "https://github.com/marcelo-6/ftbatch-bulk-edit"
Repository = "https://github.com/marcelo-6/ftbatch-bulk-edit.git"
Issues = "https://github.com/marcelo-6/ftbatch-bulk-edit/issues"
Changelog = "https://github.com/marcelo-6/ftbatch-bulk-edit/blob/main/CHANGELOG.md"

[project.scripts]
ftbatch-bulk-edit = "main:main"

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "mypy>=1.15.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=8.3.4",
    "ruff>=0.13.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
tag_regex = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"
fallback_version = "0.0.0"

[tool.pdm.build]
package-dir = "app"
includes = [
  "app/cli/",
  "app/core/",
  "app/utils/",
  "app/main.py",
]
source-includes = [
  "tests/",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]

[tool.pytest.ini_options]
pythonpath = [
    "app" # the pytests can import modules from this folder
]
